--- a/src/pages/TourPackages/TourPackages.css
+++ b/src/pages/TourPackages/TourPackages.css
@@ -2,18 +2,19 @@
 .tour-packages-page {
     padding-top: 50px;
   }
-  
+ 
   /* Hero Banner */
   .page-hero-banner {
     height: 300px;
     /* background-image: url('src/assets/home/HeroSection/banner-layer-1.png'); */
     background-size: cover;
     background-color: rgba(120, 116, 55, 0.608);
-    /* background-position: center; */
+    background-position: center;
     /* background-position: center 1%; */
     position: relative;
     display: flex;
     align-items: center;
+    padding: 50px;
     /* color: rgb(223, 11, 11); */
     
   }
