--- a/src/components/HomeUi/FeaturedPackages.css
+++ b/src/components/HomeUi/FeaturedPackages.css
@@ -84,7 +84,7 @@
 .package-image img {
   width: 100%;
   max-height: 100%;
-  object-fit: scale-down; /* Ensures full image is visible */
+  object-fit: fill !important;
 }
 
 .package-image {
