--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -289,9 +289,11 @@
   }
   
   .team-member-image img {
+
+ 
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:relative;
   }
   
   .team-member h3 {
