--- a/src/pages/BankDetail/BankDetail.css
+++ b/src/pages/BankDetail/BankDetail.css
@@ -6,7 +6,7 @@
   /* Hero Banner */
   .page-hero-banner {
     height: 300px;
-    background-image: url('https://source.unsplash.com/1600x900/?bank,finance');
+    background-image: url('/src/assets/home/HeroSection/banner-layer-1.png');
     background-size: cover;
     background-position: center;
     position: relative;
