--- a/src/pages/AddHotel/AddHotel.css
+++ b/src/pages/AddHotel/AddHotel.css
@@ -165,7 +165,7 @@
   position: relative;
   height: 300px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("https://source.unsplash.com/1600x900/?hotel,luxury");
+   ;
   background-size: cover;
   background-position: center;
   display: flex;
