--- a/src/pages/EnquireCarRental/EnquireCarRental.css
+++ b/src/pages/EnquireCarRental/EnquireCarRental.css
@@ -232,7 +232,7 @@
   position: relative;
   height: 300px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("https://source.unsplash.com/1600x900/?car,rental");
+   ;
   background-size: cover;
   background-position: center;
   display: flex;
